# smap-analyse

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260314_0001_initial.py  20260314_0002_review_groups.py  20260314_0003_review_semantics_scope.py  20260315_0004_applicability_truth.py  20260315_0005_authority_lifecycle.py
configs/: ontology.yaml
configs/domains/: beer_vn.yaml  blockchain_vn.yaml  cosmetics_vn.yaml  ev_vn.yaml  facial_cleanser_vn.yaml
configs/ml/: entity_link_head.json  entity_mention_head.json  topic_artifact_role_head.json  topic_lineage_head.json
src/smap/: __init__.py  pipeline.py  run_manifest.py
src/smap/analytics/: __init__.py  metric_contracts.py  metrics.py
src/smap/bi/: __init__.py  contracts.py  models.py  reports.py
src/smap/canonicalization/: __init__.py  alias.py  candidate_merge.py  clustering.py  discovery.py  models.py  service.py
src/smap/cli/: app.py
src/smap/contracts/: __init__.py  uap.py
src/smap/core/: __init__.py  exceptions.py  settings.py  types.py
src/smap/dedup/: models.py  service.py
src/smap/enrichers/: __init__.py  anchors.py  aspect.py  base.py  calibration.py  entity.py  intent.py  issue.py  keyword.py  models.py  segmentation.py  semantic.py  semantic_assist.py  semantic_models.py  semantic_parallel.py  sentiment.py  service.py  source.py  stance.py  topic.py  topic_artifacts.py  topic_quality.py
src/smap/hil/: __init__.py  feedback_store.py  label_studio_schemas.py  semantic_feedback.py  topic_lineage.py
src/smap/ingestion/: __init__.py  models.py  readers.py  service.py
src/smap/insights/: __init__.py  generator.py  models.py
src/smap/marts/: __init__.py  builder.py
src/smap/ml/: __init__.py  heads.py
src/smap/normalization/: __init__.py  models.py  service.py  text.py
src/smap/ontology/: __init__.py  alignment.py  domain_mapping.py  loader.py  models.py  (+3 more)
(+51 files in other folders)
