[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smap-core"
version = "1.0.0"
description = "Clean SMAP runtime handoff with a single ONNX CPU intelligence path"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "alembic>=1.14.1",
  "duckdb>=1.2.2",
  "polars>=1.26.0",
  "pydantic-settings>=2.8.1",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "rapidfuzz>=3.12.2",
  "sqlalchemy>=2.0.38",
]

[project.optional-dependencies]
runtime = [
  "fasttext-community>=0.11.5",
  "transformers>=4.49.0",
  "sentencepiece>=0.2.0",
  "onnxruntime>=1.23.1",
  "optimum-onnx[onnxruntime]>=0.1.0",
  "faiss-cpu>=1.9.0",
]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
]

[project.scripts]
smap = "smap.cli.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
